<resources>
    <string name="app_name">"Learning"</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="tolearn">"To learn:"</string>
    <string name="learnt">"Learnt: "</string>
    <string name="English">"English"</string>
    <string name="Russian">"Russian "</string>
    <string name="hintEnterE">"Enter english word or add from suggested"</string>
    <string name="hintEnterR">"Enter translation or use Yandex translator "</string>
    <string name="add">"Add"</string>
    <string name="Delete">"Delete"</string>
    <string name="Deleted">"Deleted"</string>
    <string name="translate">"Translate"</string>
    <string name="Addsomewords">"Add some words</string>
    <string name="Right">"Right"</string>
    <string name="Wrong">"Wrong"</string>
    <string name="Added">"Added: "</string>
    <string name="Youguessedright">"You guessed right?"</string>
    <string name="Correctanswer">"Correct answer:"</string>
    <string name="Congratulations">"Excellent work!!! \nYou have learned this word!"</string>
    <string name="gratsEngLearnt">"Congratulations!!! \nYou have learned that word in English"</string>
    <string name="gratsRusLearnt">"Congratulations!!! \n"You have learned this word in Russian"</string>
    <string name="TraslationError">"An error occurred during the translation"</string>
    <string name="DeleteConfirmation">"This will delete selected items. Continue?"</string>
    <string name="PurgeAll">"Remove all user data and restore default state?"</string>
    <string name="Purge">"Purge"</string>
    <string name="Close">"Close"</string>
    <string name="HelpMain">"\tWelcome to Learning Word Program!\n\n\tAt first you need to add words to your list, use Plus button to do so. After that you can answer by clicking on middle of the screen.\n\n\tI wanted this program to be simple and fast to use so I didn't add any check and you should have self control to have profit from it.\n\n\tAfter 3 right answers on both languages word will be moved to learnt. You can manage your words on list page.\n\n\tBest results can be achieved by checking all words on both languages one time every day.\n\n\tGood Luck!\n\n"</string>
    <string name="HelpList">"\tHere you can check your words, delete some of them or delete everything by Purging Database.\n\n\t Be careful to Purge, it will remove all progress.\n\n"</string>
    <string name="HelpAdd">"\tHere you can add new words to your list.\n\n\tYou can add words manually by typing word and translation for it or get translation through internet.\n\n\tAlso you can use suggested words below.\n\n"</string>
</resources>

