<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_word"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="umitsoftware.learnwords.AddWordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:elevation="5dp"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="18">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="20">

                <LinearLayout
                    android:layout_width="104dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="5"
                        android:paddingTop="10dp"
                        android:text="@string/English"

                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="5"
                        android:paddingTop="10dp"

                        android:text="@string/Russian"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="6.29"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextEngWord"
                        style="@android:style/Widget.Holo.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:ems="10"
                        android:hint="@string/hintEnterE"
                        android:inputType="textPersonName"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="normal|bold" />

                    <EditText
                        android:id="@+id/editTextRusWord"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="13"
                        android:ems="10"
                        android:hint="@string/hintEnterR"
                        android:inputType="textPersonName"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="normal|bold" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:autoLink="web"
                android:clickable="true"
                android:contextClickable="false"
                android:onClick="goYandex"
                android:paddingLeft="5dp"
                android:text="Powered by Yandex.Translate"
                android:textColor="@color/link"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnTranslate"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/translate"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button6"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:onClick="AddWord" />

            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rwResentWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
