<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_learn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="umitsoftware.learnwords.LearnActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:weightSum="20">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="20"
            android:showDividers="none|beginning|middle|end"
            android:visibility="visible"
            android:requiresFadingEdge="vertical"

            android:elevation="5dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:weightSum="20"
                android:elevation="5dp"
                android:background="@color/colorAccent"
                android:layout_weight="5"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:text="@string/tolearn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"

                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="14sp"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:visibility="visible"

                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="3dp"
                    android:width="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvToLearn"

                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="18sp"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:visibility="visible"

                    android:layout_marginBottom="5dp" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.01" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:weightSum="20"
                android:elevation="5dp"
                android:background="@color/colorAccent"
                android:layout_weight="5"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:text="@string/learnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"

                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="14sp"
                    android:textColor="?android:attr/textColorPrimaryInverse"

                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="3dp"
                    android:width="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLearnt"

                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="18sp"
                    android:textColor="?android:attr/textColorPrimaryInverse"

                    android:layout_marginBottom="5dp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="18">


            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btnAnswer"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="60dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:hint="@string/Addsomewords"
                android:textStyle="normal|bold"
                android:textSize="24sp"
                android:textAllCaps="false"
                android:onClick="btnAnswer" />

            <Button
                android:text="@string/English"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button5"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:elevation="5dp"
                android:onClick="btnSwEnglish" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/English"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEnglish"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:elevation="5dp"
            android:onClick="btnSwEnglish" />

        <Button
            android:text="@string/Russian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRussian"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:elevation="5dp"
            android:onClick="btnSwRussian" />
    </LinearLayout>
</RelativeLayout>
